# apple2tc

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  a2emu.js  a2emu.wasm  index.html
blog/part6/: ex-1.s  ex-2.s  ex-3.s  ex-4.s  ex-5.s  ex-6.s  ex.lst  ex.s  gen.sh
decoded/: CMakeLists.txt
decoded/bolo/: CMakeLists.txt  README.md  bolo-patched.b33  bolo-relocated.b33  bolo.b33  bolo.c  bolo.json  decompile.sh  main.c  preamble.s  system-inc.h  system.h
decoded/robotron/: CMakeLists.txt  decompile.sh  play.keys  robotron.c  robotron.json  robotron2048.b33  robotronc1.c
decoded/rom/: CMakeLists.txt  all.bas  collect.sh  decompile.sh  main.c  rom.c  rom.lst  romc1.c  run.json
decoded/snake-byte/: CMakeLists.txt  README.md  decompile.sh  play.kbd  play.keys  snake-byte.b33  snake-byte.c  snake-byte.json  snake-byte.lst  snake-bytec1.c
docs/disk/: README.md  disk-formats.md  dos33-prodos.md  encoding.md  hardware.md  implementation-guide.md
docs/plans/: 2026-03-01-disk-support-design.md  2026-03-01-disk-support-plan.md  2026-03-02-textemu-design.md  2026-03-02-textemu-impl.md
dsk/: dos33.dsk
include/apple2tc/: ArrayRef.h  BitSet.h  CircularList.h  DebugState6502.h  IteratorRange.h  SaveAndRestore.h  SetVector.h  SimpleAsm.h  a2io.h  a2symbols.h  apple2.h  apple2iodefs.h  d6502.h  decapplib.h  emu6502.h  soundqueue.h  support.h  system-inc.h  system.h  system2-inc.h
include/apple2tc/sokol/: README.md
include/c11threads/: README.md  c11threads.h
lib/: CMakeLists.txt
lib/a2io/: CMakeLists.txt  a2io.c  disk2.c  disk2_tables.h  font.cpp  font.h  soundqueue.c
lib/cpuemu/: CMakeLists.txt  DebugState6502.cpp  DebugState6502Serialize.cpp  apple2.cpp  applesoft.cpp  emu6502.cpp
lib/d6502/: CMakeLists.txt  SimpleAsm.cpp  a2symbols.cpp  apple2plus_rom.cpp  d6502.cpp  gen.cpp  opcodes.h
lib/decapplib/: CMakeLists.txt  decapplib.c
lib/sokol/: CMakeLists.txt  sokol.m
lib/support/: CMakeLists.txt  support.cpp
rom/: APPLE2.LST  README.md  apple2.txt
tests/: ands.ir  ands.s  dclear.json  func.ir  func.s  func1.s  run-tests.sh  subs.ir  subs.s  trees.b33  trees.ir  trees.s  trees1.ir  trees1.s
tools/: CMakeLists.txt
tools/a2emu/: CMakeLists.txt  a2emu.cpp  apple2plus_rom.h  blit.glsl  blit.h  bolo.h  robotron2084.h  sokol.c  sokol.m
tools/a6502/: CMakeLists.txt  a6502.cpp
tools/apple2tc/: Analysis.cpp  Analysis.h  CMakeLists.txt  CPURegLiveness.cpp  CPURegLiveness.h  Disas.cpp  Disas.h  GenIR.cpp  GenIR.h  IRC1.cpp  IRC1.h  PrintSimpleC.cpp  PubIR.h  RuntimeData.cpp  SSA.cpp  apple2tc.cpp  dce.cpp  routines.cpp  routines.h  simplify.cpp
tools/apple2tc/ir/: IR.cpp  IR.h  IRDump.cpp  IRDump.h  IRUtil.cpp  IRUtil.h  ValueList.h  Values.def
tools/id/: CMakeLists.txt  d6502.cpp  d6502.h  id.cpp
tools/textemu/: CMakeLists.txt  disk_test.cpp  textemu.cpp
